--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   sqflite: ^2.0.1
   flutter_local_notifications: ^9.2.0
   provider: ^6.0.2
+  http: ^0.13.4
+  shared_preferences: ^2.0.12
   flutter:
     sdk: flutter
 
