--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.0.2
   http: ^0.13.4
   shared_preferences: ^2.0.12
+  flutter_colorpicker: ^1.0.3
   flutter:
     sdk: flutter
 
